--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Popular Movies</string>
+    <string name="movie_poster_description">Movie Poster</string>
+    <string name="movie_title_description">Movie Title</string>
+    <string name="example_movie_title">Movie Title That Turns Out To Be Horribly Long</string>
 </resources>
