--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="movie_poster_description">Movie Poster</string>
     <string name="movie_title_description">Movie Title</string>
     <string name="example_movie_title">Movie Title That Turns Out To Be Horribly Long</string>
+    <string name="title_activity_internet_error">InternetError</string>
+    <string name="no_internet_connection">No Internet Connection</string>
+    <string name="retry">Retry</string>
 </resources>
