--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="title_activity_internet_error">InternetError</string>
     <string name="no_internet_connection">No Internet Connection</string>
     <string name="retry">Retry</string>
+    <string name="sort_popular">Sort: Popular</string>
+    <string name="sort_highest_rated">Sort: Highest Rated</string>
+    <string name="toggle_titles">Toggle Titles</string>
+    <string name="larger">Larger</string>
+    <string name="smaller">Smaller</string>
 </resources>
